--- a/project/package.json
+++ b/project/package.json
@@ -10,9 +10,10 @@
     "gulp-sass": "^2.2.0",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.2",
-    "shelljs": "^0.6.0",
-    "vinyl-source-stream": "^1.1.0",
+    "js-cookie": "^2.1.4",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "shelljs": "^0.6.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
