--- a/project/package.json
+++ b/project/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "start": "gulp build && cd .. && python manage.py runserver 0.0.0.0:8000"
+    "start": "gulp build && cd .. && python manage.py runserver 0.0.0.0:8000",
+    "update": "cd .. && git add . && git commit -m 'update' && git push "
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
